--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Citi OAuth Skeleton Sample Application</title>
+    <title>Citi OAuth Application</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
@@ -12,8 +12,8 @@
     <div class="row">
     <div class="col-md-10 col-md-offset-1">
     <div class="jumbotron">
-      <h1>3-Legged Authentication Example</h1>
-      <p>Click the button below to be redirected to a Citi Developer Hub endpoint. That endpoint will redirect you to https://localhost:3000/accounts/retrieve with a code variable in the url. This code will be used by your express server to first retrieve an access_token, and subsequently retrieve account information.</p>
+      <h1>3-Legged Authentication</h1>
+      <p>Please Click the button below to begin our demo.</p>
       <p><a class="btn btn-primary btn-lg" href="https://sandbox.apihub.citi.com/gcb/api/authCode/oauth2/authorize?response_type=code&client_id=bb729eb3-1325-4ac2-baf7-eb4c1e8a950d&scope=accounts_details_transactions customers_profiles&countryCode=US&businessCode=GCB&locale=en_US&state=12093&redirect_uri=https://127.0.0.1:3000/accounts/retrieve" role="button">Login with Citi</a></p>
   </div>
   </div>
